...
   * various screens of the application.
   */
  object Tag {

    /** Shared constants for tagging UI components in the CreateAlertScreen and EditAlertScreen. */
    object AlertInputs {
      const val INSTRUCTION_TEXT = "instructionText"
      const val PRODUCT_FIELD = "productField"
      const val URGENCY_FIELD = "urgencyField"
      const val DROPDOWN_ITEM = "dropdownItem"
      const val LOCATION_FIELD = "locationField"
      const val MESSAGE_FIELD = "messageField"
      const val CURRENT_LOCATION = "currentLocation"
    }

    /** Constants for tagging UI components specific to the CreateAlertScreen * */
    object CreateAlertScreen {
      const val SCREEN = "createAlertScreen"
      const val SUBMIT_BUTTON = "submitButton"
    }

    /** Constants for tagging UI components specific to the EditAlertScreen */
    object EditAlertScreen {
      const val SCREEN = "editAlertScreen"
...
      }

      /** Constants for tagging UI components in the SignUpScreen. */
      object SignUpScreen {
        const val SCREEN = "signUpScreen"
        const val INSTRUCTION_TEXT = "instructionText"
        const val CONFIRM_PASSWORD_TEXT = "confirmText"
        const val CONFIRM_PASSWORD_FIELD = "confirmPasswordField"
        const val CONFIRM_PASSWORD_VISIBILITY_BUTTON = "confirmPasswordVisibilityButton"
        const val CONFIRM_PASSWORD_ERROR_TEXT = "confirmPasswordErrorText"
        const val SIGN_UP_BUTTON = "signUpButton"
        const val ALREADY_REGISTERED_NAV_LINK = "alreadyRegisteredButton"
      }

      // shared authentication components
      const val PASSWORD_ERROR_TEXT = "passwordErrorText"
      const val EMAIL_ERROR_TEXT = "emailErrorText"
      const val BACKGROUND = "background"
      const val WELCOME_TEXT = "welcomeText"
      const val EMAIL_FIELD = "emailField"
      const val PASSWORD_FIELD = "passwordField"
      const val PASSWORD_VISIBILITY_BUTTON = "passwordVisibilityButton"
    }

    /** Constants for tagging UI components in the MapScreen. */
    object MapScreen {
      const val SCREEN = "mapScreen"
      const val MAP_VIEW_CONTAINER = "mapViewContainer"
...
      const val RESOLVE_ALERT_BUTTON = "resolveAlertButton"
      const val ACCEPT_ALERT_BUTTON = "acceptAlertButton"
    }

    /** Constants for tagging UI components in the BottomNavigationMenu. */
    object BottomNavigationMenu {
      const val BOTTOM_NAVIGATION_MENU = "bottomNavigationMenu"
      const val BOTTOM_NAVIGATION_MENU_ITEM = "bottomNavigationMenu"
      const val CONNECTIVITY_BANNER = "connectivityBanner"
      const val CONNECTIVITY_BANNER_TEXT = "connectivityBannerText"
    }

    /** Constants for tagging UI components in the TopAppBar. */
    object TopAppBar {
      const val TOP_BAR = "topBar"
      const val GO_BACK_BUTTON = "goBackButton"
      const val SETTINGS_BUTTON = "settingsButton"
      const val CHAT_BUTTON = "chatButton"
      const val EDIT_BUTTON = "editButton"
      const val TITLE_TEXT = "titleText"
    }
...
